# faststrings

./: AGENTS.md  Cargo.toml  TODO.md
benches/: bcopy.rs  bsd_mem.rs  ffs.rs  memccpy.rs  memchr.rs  memcmp.rs  memcpy.rs  memmem.rs  memmove.rs  memset.rs  strchr.rs  strcmp.rs  strcompare_ext.rs  strcopy.rs  strerror.rs  string_ops.rs  strlen.rs  strsearch.rs  strstate.rs  wide_str.rs  wmem_bench.rs
src/: bcopy.rs  ffs.rs  lib.rs  mem.rs  memchr.rs  memcmp.rs  memcpy.rs  memmove.rs  memset.rs  search.rs  simd.rs  stpncpy.rs  str.rs  strdup.rs  strerror.rs  strerror_r.rs  strndup.rs  strtok.rs  strtok_r.rs  strxfrm.rs  token.rs  types.rs  wcsdup.rs  wcstok.rs  wcsxfrm.rs  wide.rs  wmem.rs
