[package]
name = "faststrings"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "memcpy"
harness = false

[[bench]]
name = "memset"
harness = false

[[bench]]
name = "memmove"
harness = false

[[bench]]
name = "memcmp"
harness = false

[[bench]]
name = "memchr"
harness = false

[[bench]]
name = "ffs"
harness = false
