[package]
name = "faststrings"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "memcpy"
harness = false

[[bench]]
name = "memset"
harness = false

[[bench]]
name = "memmove"
harness = false

[[bench]]
name = "memcmp"
harness = false

[[bench]]
name = "memchr"
harness = false

[[bench]]
name = "ffs"
harness = false

[[bench]]
name = "bcopy"
harness = false

[[bench]]
name = "bsd_mem"
harness = false

[[bench]]
name = "memccpy"
harness = false

[[bench]]
name = "memmem"
harness = false

[[bench]]
name = "strlen"
harness = false

[[bench]]
name = "strchr"
harness = false

[[bench]]
name = "strcmp"
harness = false

[[bench]]
name = "strsearch"
harness = false

[[bench]]
name = "strcompare_ext"
harness = false

[[bench]]
name = "strcopy"
harness = false
